--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <script src="analytics-config.js"></script>
     <script
-      src="thrivestack.min.js"
+      src="https://thrivestack-temp-static-assets.s3.us-east-1.amazonaws.com/scripts/script-testing-rohit/thrivestack.development.min.js"
       api-key="Xj4t169O/TzmOdqGhZfq4sNggN/2SuQYu4kX7gaZ+W8="
       source="marketing,product"
     ></script>
