--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </footer>
 
-    <script src="analytics-config.js"></script>
+    <!-- <script src="analytics-config.js"></script> -->
     <script
       src="thrivestack.min.js"
       api-key="Xj4t169O/TzmOdqGhZfq4sNggN/2SuQYu4kX7gaZ+W8="
