New Script and Signup page

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,14 +10,17 @@
     <nav class="navbar">
       <div class="nav-container">
         <h1 class="nav-logo">Sample App</h1>
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="index.html" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="dashboard.html" class="nav-link active">Dashboard</a>
-          </li>
-        </ul>
+         <ul class="nav-menu">
+           <li class="nav-item">
+             <a href="index.html" class="nav-link">Home</a>
+           </li>
+           <li class="nav-item">
+             <a href="dashboard.html" class="nav-link active">Dashboard</a>
+           </li>
+           <li class="nav-item">
+             <a href="signup.html" class="nav-link">Sign Up</a>
+           </li>
+         </ul>
       </div>
     </nav>
 
@@ -90,9 +93,9 @@
 
     <script src="analytics-config.js"></script>
     <script
-      src="thrivestack.min.js"
-      api-key="Xj4t169O/TzmOdqGhZfq4sNggN/2SuQYu4kX7gaZ+W8="
-      source="marketing,product"
+      src="https://d3cgzwt0fb6o2k.cloudfront.net/latest/thrivestack.js"
+      api-key="5h2FiIEqcqODacChxwHAUHIjeLmIVzQ/ZMNSdkso3XA="
+      source="marketing"
     ></script>
     <script src="script.js"></script>
   </body>
