New Script and Signup page 1

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,9 @@
            <li class="nav-item">
              <a href="signup.html" class="nav-link">Sign Up</a>
            </li>
+           <li class="nav-item">
+             <a href="email-abuse-checker.html" class="nav-link">Email Checker</a>
+           </li>
          </ul>
       </div>
     </nav>
