New Script and Signup page 2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <script src="analytics-config.js"></script>
     <script
-      src="https://d3cgzwt0fb6o2k.cloudfront.net/latest/thrivestack.js"
+      src="thrivestack.min.js"
       api-key="5h2FiIEqcqODacChxwHAUHIjeLmIVzQ/ZMNSdkso3XA="
       source="marketing"
     ></script>
