New Script and Signup page 3

--- a/signup.html
+++ b/signup.html
@@ -33,6 +33,11 @@
           <div class="signup-header">
             <h2>Create Your Account</h2>
             <p>Join us and start tracking your analytics today</p>
+            <div style="margin-top: 20px; padding: 15px; background: #e6f3ff; border-left: 4px solid #667eea; border-radius: 5px;">
+              <p style="margin: 0; font-size: 0.9rem; color: #555;">
+                📊 <strong>Note:</strong> Upon signup, we'll send both <strong>Identify</strong> and <strong>Group</strong> calls to ThriveStack with your information.
+              </p>
+            </div>
           </div>
 
           <form id="signupForm" class="signup-form">
