New Script and Signup page 8

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <script src="analytics-config.js"></script>
     <script
-      src="thrivestack.min.js"
-      api-key="3AJg4M+2y9yLsCfXsbGYlI8//03Uk1GPGtXn8P2VKJ8="
+      src="https://ts-script.app.thrivestack.ai/latest/thrivestack.js"
+      api-key="i1rPJo38lB6hR2qZC5iNNz0xcGRuBYIKRVYfTBdpJyY="
       source="marketing"
     ></script>
     <script src="script.js"></script>
