New Script and Signup page 9

--- a/dashboard.html
+++ b/dashboard.html
@@ -96,8 +96,8 @@
 
     <script src="analytics-config.js"></script>
     <script
-      src="https://ts-script.app.thrivestack.ai/latest/thrivestack.js"
-      api-key="i1rPJo38lB6hR2qZC5iNNz0xcGRuBYIKRVYfTBdpJyY="
+      src="https://d3cgzwt0fb6o2k.cloudfront.net/latest/thrivestack.js"
+      api-key="3AJg4M+2y9yLsCfXsbGYlI8//03Uk1GPGtXn8P2VKJ8="
       source="marketing"
     ></script>
     <script src="script.js"></script>
