--- a/dashboard.html
+++ b/dashboard.html
@@ -98,7 +98,7 @@
     <script
       src="https://d3cgzwt0fb6o2k.cloudfront.net/latest/thrivestack.js"
       api-key="3AJg4M+2y9yLsCfXsbGYlI8//03Uk1GPGtXn8P2VKJ8="
-      source="marketing"
+      source="product"
     ></script>
     <script src="script.js"></script>
   </body>
