--- a/email-abuse-checker.html
+++ b/email-abuse-checker.html
@@ -93,8 +93,8 @@ console.log(result);</code></pre>
 
     <script src="analytics-config.js"></script>
     <script
-      src="https://d3cgzwt0fb6o2k.cloudfront.net/latest/thrivestack.js"
-      api-key="3AJg4M+2y9yLsCfXsbGYlI8//03Uk1GPGtXn8P2VKJ8="
+      src="https://ts-script.app.thrivestack.ai/latest/thrivestack.js"
+      api-key="i1rPJo38lB6hR2qZC5iNNz0xcGRuBYIKRVYfTBdpJyY="
       source="marketing"
     ></script>
     <script src="script.js"></script>
