Added user_email in script 9

--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,7 @@
 
     <script src="analytics-config.js"></script>
     <script
-      src="https://d3cgzwt0fb6o2k.cloudfront.net/latest/thrivestack.js"
+      src="thrivestack.min.js"
       api-key="3AJg4M+2y9yLsCfXsbGYlI8//03Uk1GPGtXn8P2VKJ8="
       source="marketing"
     ></script>
